<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_session">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_person_settings"
            android:key="pref_key_login"
            android:summary="@string/settings_summary_session"
            android:title="@string/settings_title_session" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_data">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_data_usage_settings"
            android:key="pref_key_data"
            android:summary="@string/settings_summary_data"
            android:title="@string/settings_title_data" />
    </PreferenceCategory>

</PreferenceScreen>