<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about_m"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zecovery.android.nochedigna.about.AboutMActivity"
    tools:showIn="@layout/activity_about_m">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="16dp"
                android:layout_weight="8"
                android:text="@string/action_about"
                android:textColor="@color/grey_800"
                android:textSize="24sp" />

            <ImageView
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:src="@drawable/logo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="8"
                android:text="@string/title_about_noche_digna"
                android:textColor="@color/grey_800"
                android:textSize="24sp" />

            <ImageView
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/logo_main" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/about_m"
            android:textColor="@color/grey_600"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
